Fix textarea styling on narrow displays

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -31,6 +31,7 @@ textarea, button {
 }
 
 textarea {
+  box-sizing: border-box;
   width: 100%;
   height: 5em;
   border: 1px solid $purple;
